--- a/package.json
+++ b/package.json
@@ -20,15 +20,30 @@
   },
   "scripts": {
     "postinstall": "presetter bootstrap",
-    "test": "true"
+    "build": "run-s clean build:gatsby",
+    "build:gatsby": "ts-node-cwd --transpile-only -- node_modules/.bin/gatsby build --verbose",
+    "clean": "run-p clean:*",
+    "clean:babel": "shx rm -f .babelrc.json",
+    "clean:cache": "shx rm -rf .cache",
+    "clean:codegen": "shx rm -f types/@graphql.ts",
+    "clean:public": "shx rm -rf public",
+    "lint": "run lint",
+    "start": "run-s clean start:gatsby",
+    "start:gatsby": "ts-node-cwd --transpile-only -- node_modules/.bin/gatsby develop"
   },
   "devDependencies": {
+    "@babel/node": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@types/react": "^16.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
+    "gatsby": "^3.0.0",
+    "graphql": "^15.0.0",
     "presetter": "^2.1.0",
     "presetter-preset": "^2.1.0"
   },
   "dependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   }
 }
