--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@types/react": "^16.0.0",
+    "@types/react-helmet": "^6.0.0",
     "@types/webpack-bundle-analyzer": "^3.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "gatsby": "^3.0.0",
+    "gatsby-plugin-react-helmet": "^4.0.0",
     "graphql": "^15.0.0",
     "presetter": "^2.1.0",
     "presetter-preset": "^2.1.0",
@@ -46,6 +48,7 @@
   },
   "dependencies": {
     "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react-dom": "^16.0.0",
+    "react-helmet": "^6.0.0"
   }
 }
