--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "gatsby": "^3.0.0",
+    "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "graphql": "^15.0.0",
     "presetter": "^2.1.0",
