--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@types/react": "^16.0.0",
+    "@types/webpack-bundle-analyzer": "^3.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "gatsby": "^3.0.0",
     "graphql": "^15.0.0",
     "presetter": "^2.1.0",
-    "presetter-preset": "^2.1.0"
+    "presetter-preset": "^2.1.0",
+    "webpack-bundle-analyzer": "^4.0.0"
   },
   "dependencies": {
     "react": "^16.0.0",
