--- a/package.json
+++ b/package.json
@@ -34,17 +34,22 @@
   "devDependencies": {
     "@babel/node": "^7.0.0",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@tailwindcss/typography": "^0.4.0",
     "@types/react": "^16.0.0",
     "@types/react-helmet": "^6.0.0",
+    "@types/tailwindcss": "^2.2.0",
     "@types/webpack-bundle-analyzer": "^3.0.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "gatsby": "^3.0.0",
     "gatsby-plugin-graphql-codegen": "^3.0.0",
+    "gatsby-plugin-postcss": "^4.0.0",
     "gatsby-plugin-react-helmet": "^4.0.0",
     "graphql": "^15.0.0",
+    "postcss": "^8.3.0",
     "presetter": "^2.1.0",
     "presetter-preset": "^2.1.0",
+    "tailwindcss": "^2.2.0",
     "webpack-bundle-analyzer": "^4.0.0"
   },
   "dependencies": {
