--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
   "devDependencies": {
     "@alvis/preset-gatsby": "github:alvis/preset-gatsby",
     "@fontsource/nunito": "^4.5.0",
+    "@fortawesome/free-brands-svg-icons": "^5.0.0",
+    "@fortawesome/react-fontawesome": "^0.1.0",
     "@tailwindcss/typography": "^0.4.0"
   },
   "dependencies": {
     "gatsby": "^3.0.0",
+    "gatsby-plugin-image": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-helmet": "^6.0.0"
