--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   },
   "devDependencies": {
     "@alvis/preset-gatsby": "github:alvis/preset-gatsby",
-    "@fontsource/nunito": "^4.5.0",
+    "@fontsource/hind": "^4.5.0",
+    "@fontsource/raleway": "^4.5.0",
     "@fortawesome/free-brands-svg-icons": "^5.0.0",
     "@fortawesome/react-fontawesome": "^0.1.0",
     "@tailwindcss/typography": "^0.5.0"
