--- a/package.json
+++ b/package.json
@@ -20,25 +20,24 @@
   },
   "scripts": {
     "prepare": "presetter bootstrap",
-    "build": "ts-node-cwd --transpile-only -- ./node_modules/.bin/gatsby build --verbose",
+    "build": "gatsby build --verbose",
     "clean": "run clean",
-    "clean:codegen": "shx rm -f types/~graphql.ts",
     "lint": "run lint",
-    "start": "ts-node-cwd --transpile-only -- ./node_modules/.bin/gatsby develop --host 0.0.0.0"
+    "start": "gatsby develop --host 0.0.0.0"
   },
   "devDependencies": {
     "@alvis/preset-gatsby": "github:alvis/preset-gatsby",
     "@fontsource/hind": "^4.5.0",
     "@fontsource/raleway": "^4.5.0",
-    "@fortawesome/free-brands-svg-icons": "^5.0.0",
-    "@fortawesome/react-fontawesome": "^0.1.0",
-    "@tailwindcss/typography": "^0.5.0"
+    "@fortawesome/free-brands-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tailwindcss/typography": "^0.5.0",
+    "babel-plugin-module-resolver": "^4.0.0"
   },
   "dependencies": {
-    "gatsby": "^4.0.0",
+    "gatsby": "^4.20.0",
     "gatsby-plugin-image": "^2.0.0",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-helmet": "^6.0.0"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
