--- a/.presetterrc.json
+++ b/.presetterrc.json
@@ -6,12 +6,11 @@
         {
           "files": ["src/**/*.tsx"],
           "rules": {
-            "max-lines-per-function": ["error", { "code": 90 }]
+            "max-lines-per-function": ["error", { "max": 90 }]
           }
         }
       ]
     },
-    "gitignore": ["/.env.*", "!/.env.sample", "/types/~*"]
-  },
-  "ignores": [".babelrc.json"]
+    "gitignore": ["/.env.*", "!/.env.sample", "/types/gatsby-graphql.d.ts"]
+  }
 }
