--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "alvis",
   "version": "0.0.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "description": "My personal website",
   "keywords": [
     "alvis",
@@ -35,8 +38,8 @@
     "babel-plugin-module-resolver": "^4.0.0"
   },
   "dependencies": {
-    "gatsby": "^4.20.0",
-    "gatsby-plugin-image": "^2.0.0",
+    "gatsby": "^5.0.0",
+    "gatsby-plugin-image": "^3.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
